# ComputerComponentsShop

./: CMakeLists.txt  ComponentHeaderItem.py  ComponentHeaderView.py  ComputerComponentsConfiguration.py  ComputerComponentsShop.e4p  ComputerConfShop.xml  ComputerConfigurationParser.py  ModelEnumerations.py  PyQt_ComputerComponentsShop.wpr  QFrozenColumnTableView.py  main.py  test1.e4p
.eric4project/: test1.e4q  test1.e4t
CMake/: options.cmake  plugins.cmake
Data/: ComputerConfigurationModel.py  SearchResultType.py  ShopPluginInterface.py  ShopPluginsStubs.py
GUI/: ComponentHeaderItem.py  ComponentHeaderView.py  ModelEnumerations.py  QFrozenColumnTableView.py
Sources/: CMakeLists.txt  CMakeLists.txt~
Sources/GUnitTest/: CMakeLists.txt  CMakeLists.txt~  main.cpp
Sources/GUnitTest/Mocks/: LoadNetworkObjectMock.h  ShopPluginBaseInheriterMock.cpp  ShopPluginBaseInheriterMock.h
Sources/GUnitTest/Tests/: ShopPluginBaseTest.cpp  ShopPluginBaseTest.h
Sources/Main/: AMD Phenom II 965.xml  CMakeLists.txt  CMakeLists.txt~  ComputerConfShop.xml  ConfCompShop.qrc  Intel Core i5 Configuration.xml  loggers.cpp  loggers.cpp~RF10b16d88.TMP  loggers.cpp~RF10b2fa3d.TMP  main.cpp
Sources/Main/Data/: CDataThread.cpp  CDataThread.h  CProxySettings.cpp  CProxySettings.h  CRefreshData.cpp  CRefreshData.h  ComponentConfXMLReader.cpp  ComponentConfXMLReader.h  ComputerConfModel.cpp  ComputerConfModel.h  Enumerations.h  ProxySettings.h
Sources/Main/GUI/: ComponentDelegate.cpp  ComponentDelegate.h  ComponentHeaderEntry.cpp  ComponentHeaderEntry.h  ComponentHeaderView.cpp  ComponentHeaderView.h  ComputerConfView.cpp  ComputerConfView.h  ComputerConfView_p.h  CustomHeaderView.cpp  CustomHeaderView.h  CustomHeaderViewEntry.h  FrozenTableView.cpp  FrozenTableView.h  MainWindow.cpp  MainWindow.h  ProxySettingsGUI.cpp  ProxySettingsGUI.h  ShopHeaderEntry.cpp  ShopHeaderEntry.h  ShopHeaderView.cpp  ShopHeaderView.h  ve-2105.tmp
Sources/Plugins/: ArestShop.cpp  ArestShop.h  ArestShop.qrc  ArestShopSelectors.xml  CMakeLists.txt  CMakeLists.txt~  CMakeLists_Arest.txt  CMakeLists_Arest_lib.txt  CMakeLists_Komputronik.txt  CMakeLists_Komputronik_lib.txt  CMakeLists_Proline.txt  CMakeLists_Proline_lib.txt  KomputronikShop.cpp  KomputronikShop.h  KomputronikShop.qrc  KomputronikShopSelectors.xml  ProlineShop.cpp  ProlineShop.h  ProlineShop.qrc  ProlineShopSelectors.xml  ShopPluginBase.cpp  ShopPluginBase.h  ShopPluginBase_p.h  ShopPluginNetwork.cpp  ShopPluginNetwork.h  loggers.cpp
Sources/Plugins/Network/: LoadNetworkObject.cpp  LoadNetworkObject.h  LoadNetworkObjectPrivate.h
Sources/Tools/: CMakeLists.txt  CMakeLists.txt~  loggers.cpp
Sources/UnitTest/: CComputerConfModelTest.cpp  CComputerConfModelTest.h  CComputerConfXMLReaderTest.h  CCustomHeadersTest.cpp  CCustomHeadersTest.h  CMakeLists.txt  CMakeLists.txt~  ProxySettingClass.cpp  main.cpp  proline_search_AMD.htm
Sources/UnitTest/PluginsTests/: CArestParserTest.cpp  CArestParserTest.h  CArestPluginTest.cpp  CArestPluginTest.h  CKomputronikParserTest.cpp  CKomputronikParserTest.h  CKomputronikPluginTest.cpp  CKomputronikPluginTest.h  CProlineParserTest.cpp  CProlineParserTest.h  CProlinePluginTest.cpp  CProlinePluginTest.h  LoadNetworkObjectTest.cpp  LoadNetworkObjectTest.h  ShopPluginNetworkTest.cpp  ShopPluginNetworkTest.h
Sources/UnitTest/TestPages/: page_Arest_AMD PHENOM II X4 965_SinglePage.html  page_Arest_AMD PHENOM X4_SingleSearchPage.html  page_Arest_Wieloryb_NotFound.html  page_Komputronik_AMD Phenom II 965_SinglePage.html  page_Komputronik_Corsair DDR3_SingleSearchPage.html  page_Komputronik_QNAP TS-212_Refresh.html  page_Komputronik_Wieloryb_NotFoundPage.html  page_Proline_AMD Phenom II 965 BOX_SinglePage.html  page_Proline_Gigabyte 1155 GA-Z77_SingleSearchPage.html  page_Proline_Wieloryb_NotFoundPage.html
Sources/log4qt/: CMakeLists.txt
Sources/tidy/: CMakeLists.txt
UnitTest/: ComputerConfigurationModelTest.py  ConnectionBox.py
_eric4project/: ComputerComponentsShop.e4q  ComputerComponentsShop.e4t
docs/: ComputerComponentsShop.EAP
include/Plugins/: CompPriceData.h  ShopInterface.h
include/Tools/: loggers.h
