cmake_minimum_required(VERSION 2.8)
project(ComputerConfShop_Sources)

add_subdirectory(Main)
add_subdirectory(UnitTest)
add_subdirectory(Plugins)
add_subdirectory(tidy)
add_subdirectory(tools)
add_subdirectory(gmock)
add_subdirectory(GUnitTest)
if (Logger STREQUAL "log4Qt")
  add_subdirectory(log4qt)
elseif (Logger STREQUAL "log4Cpp")
  add_subdirectory(log4cpp)
endif (Logger STREQUAL "log4Qt")
